--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 					vehicula ultrices sed ultricies condimentum. Magna sed etiam consequat, et lorem adipiscing sed
 					nulla. Volutpat nisl et tempus et dolor libero, feugiat magna tempus, sed et lorem adipiscing.</p>
 				<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
-				<iframe src="https://pgpl26.csb.app/"
+				<iframe src="https://codesandbox.io/embed/pgpl26?view=preview"
 					style="width:100%; height: 500px; border:0; border-radius: 4px; overflow:hidden;"
 					title="Polygon Universal Graphs"
 					allow="accelerometer; ambient-light-sensor; camera; encrypted-media; geolocation; gyroscope; hid; microphone; midi; payment; usb; vr; xr-spatial-tracking"
