--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 			<div class="content">
 				<p><strong>First of all what's this all about ?</strong></p>
 				<p>In this context, we are looking for</p>
-				<iframe src="https://codesandbox.io/embed/pgpl26?view=preview&hidenavigation=1"
+				<iframe src="https://codesandbox.io/p/sandbox/c5l8sg"
 					style="width:100%; height: 500px; border:0; border-radius: 4px; overflow:hidden;"
 					title="Polygon Universal Graphs"
 					allow="accelerometer; ambient-light-sensor; camera; encrypted-media; geolocation; gyroscope; hid; microphone; midi; payment; usb; vr; xr-spatial-tracking"
