--- a/index.html
+++ b/index.html
@@ -43,11 +43,12 @@
 			<div class="content">
 				<p><strong>First of all what's this all about ?</strong></p>
 				<p>In this context, we are looking for</p>
-				<iframe src="https://codesandbox.io/p/sandbox/c5l8sg"
+				<iframe src="https://codesandbox.io/embed/c5l8sg?view=preview&module=%2Findex.html&hidenavigation=1"
 					style="width:100%; height: 500px; border:0; border-radius: 4px; overflow:hidden;"
-					title="Polygon Universal Graphs"
+					title="strange-lucy"
 					allow="accelerometer; ambient-light-sensor; camera; encrypted-media; geolocation; gyroscope; hid; microphone; midi; payment; usb; vr; xr-spatial-tracking"
-					sandbox="allow-forms allow-modals allow-popups allow-presentation allow-same-origin allow-scripts"></iframe>
+					sandbox="allow-forms allow-modals allow-popups allow-presentation allow-same-origin allow-scripts"
+				></iframe>
 			</div>
 
 		</section>
